--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,12 @@
         "php": ">=7.1",
         "stratadox/instantiator": "^0.1.0",
         "stratadox/immutable-collection": "^1.1",
-        "stratadox/hydrator-contracts": "^0.2"
+        "stratadox/hydration-mapper": "^2.2",
+        "stratadox/identity-map": "^0.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
         "satooshi/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.9.2",
-        "stratadox/hydrator": "^3.3",
-        "stratadox/hydration-mapper": "^2.2"
+        "phpstan/phpstan": "^0.9.2"
     }
 }
