--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,9 @@ script:
 after_success:
   - travis_retry php vendor/bin/php-coveralls
 
+after_failure:
+  - touch build/logs/infection-log.txt
+  - cat build/logs/infection-log.txt
+
 notifications:
   email: false
