--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.1",
         "satooshi/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.9.2"
+        "phpstan/phpstan": "^0.9.2",
+        "stratadox/specification": "^1.0"
     }
 }
