--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         "stratadox/instantiator": "^0.1.0",
         "stratadox/immutable-collection": "^1.1",
         "stratadox/hydration-mapper": "^2.4",
-        "stratadox/identity-map": "^0.4"
+        "stratadox/identity-map": "^0.4.1"
     },
     "require-dev": {
+        "php-coveralls/php-coveralls": "^2.0",
         "phpunit/phpunit": "^7.1",
-        "satooshi/php-coveralls": "^2.0",
         "phpstan/phpstan": "^0.9.2",
         "stratadox/specification": "^1.0"
     }
